
    HADOOP-12764. Increase default value of KMX maxHttpHeaderSize and make it
    configurable. (zhz)

    HADOOP-12788. OpensslAesCtrCryptoCodec should log which random number generator is used.
    (Wei-Chiu Chuang via umamahesh)

    HADOOP-12699. TestKMS#testKMSProvider intermittently fails during
    'test rollover draining'. (Xiao Chen via wang)

  OPTIMIZATIONS

    HADOOP-11785. Reduce the number of listStatus operation in distcp
    buildListing (Zoran Dimitrijevic via Colin P. McCabe)

    HADOOP-11970. Replace uses of ThreadLocal<Random> with JDK7
    ThreadLocalRandom.  (Sean Busbey via Colin P. McCabe)

    HADOOP-11772. RPC Invoker relies on static ClientCache which has
    synchronized(this) blocks. (wheat9)

    HADOOP-11242. Record the time of calling in tracing span of
    IPC server. (Masatake Iwasaki via aajisaka)

    HADOOP-11885. hadoop-dist dist-layout-stitching.sh does not work with dash.
    (wang)

    HADOOP-12104. Migrate Hadoop Pipes native build to new CMake framework
    (alanburlison via cmccabe)

    HADOOP-12036. Consolidate all of the cmake extensions in one directory
    (alanburlison via cmccabe)

    HADOOP-12112. Make hadoop-common-project Native code -Wall-clean
    (alanburlison via cmccabe)

    HADOOP-12172. FsShell mkdir -p makes an unnecessary check for the existence
    of the parent. (cnauroth)

    HADOOP-12194. Support for incremental generation in the protoc plugin.
    (wang)

    HADOOP-11878. FileContext#fixRelativePart should check for not null for a
    more informative exception. (Brahma Reddy Battula via kasha)

    HADOOP-11984. Enable parallel JUnit tests in pre-commit.
    (Chris Nauroth via vinayakumarb)

    HADOOP-12450. UserGroupInformation should not log at WARN level if no groups
    are found. (Elliott Clark via stevel)

    HADOOP-12758. Extend CSRF Filter with UserAgent Checks
    (Larry McCay via cnauroth)

  BUG FIXES
