@@ -533,6 +533,26 @@ block|}
 name|AclStatus
 name|aclStatus
 init|=
+literal|null
+decl_stmt|;
+name|List
+argument_list|<
+name|AclEntry
+argument_list|>
+name|entries
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|perm
+operator|.
+name|getAclBit
+argument_list|()
+condition|)
+block|{
+name|aclStatus
+operator|=
 name|item
 operator|.
 name|fs
@@ -543,23 +563,23 @@ name|item
 operator|.
 name|path
 argument_list|)
-decl_stmt|;
-name|List
-argument_list|<
-name|AclEntry
-argument_list|>
+expr_stmt|;
 name|entries
-init|=
-name|perm
-operator|.
-name|getAclBit
-argument_list|()
-condition|?
+operator|=
 name|aclStatus
 operator|.
 name|getEntries
 argument_list|()
-else|:
+expr_stmt|;
+block|}
+else|else
+block|{
+name|aclStatus
+operator|=
+literal|null
+expr_stmt|;
+name|entries
+operator|=
 name|Collections
 operator|.
 expr|<
@@ -567,7 +587,8 @@ name|AclEntry
 operator|>
 name|emptyList
 argument_list|()
-decl_stmt|;
+expr_stmt|;
+block|}
 name|ScopedAclEntries
 name|scopedEntries
 init|=
